infra/k8s/base/istio/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: vpm-mini-gateway
  namespace: istio-system
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    hostname: "*"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
