infra/k8s/base/istio/httproute-hello.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello-route
  namespace: hyper-swarm
spec:
  parentRefs:
  - name: vpm-mini-gateway
    namespace: istio-system
  hostnames:
  - "*"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /hello
    backendRefs:
    - name: hello
      port: 80
      weight: 100
